// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildProposalDocDefinition — Skonto conditional block (DEC-120) > Snapshot mit Skonto deterministisch 1`] = `
[
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Empfaenger",
  },
  {
    "margin": [
      0,
      0,
      0,
      18,
    ],
    "stack": [
      {
        "bold": true,
        "color": "#0f172a",
        "text": "—",
      },
    ],
  },
  {
    "canvas": [
      {
        "lineColor": "#120774",
        "lineWidth": 1.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
  },
  {
    "margin": [
      0,
      8,
      0,
      0,
    ],
    "style": "label",
    "text": "Angebot V1",
  },
  {
    "bold": true,
    "color": "#0f172a",
    "fontSize": 16,
    "margin": [
      0,
      0,
      0,
      16,
    ],
    "text": "Test-Angebot",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "table": {
      "body": [
        [
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Pos",
          },
          {
            "style": "tableHeader",
            "text": "Produkt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Menge",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Einzelpreis",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Rabatt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Summe",
          },
        ],
        [
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "stack": [
              {
                "style": "tableCellBold",
                "text": "Beratungstag",
              },
              {
                "style": "tableCellMuted",
                "text": "8h Onsite",
              },
            ],
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1.000,00 €",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "—",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "1.000,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "auto",
        "*",
        "auto",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "columns": [
      {
        "text": "",
      },
      {
        "stack": [
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Subtotal Netto",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "1.000,00 €",
              },
            ],
          },
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Steuer (19%)",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "190,00 €",
              },
            ],
          },
          {
            "canvas": [
              {
                "lineColor": "#cbd5e1",
                "lineWidth": 0.5,
                "type": "line",
                "x1": 0,
                "x2": 220,
                "y1": 0,
                "y2": 0,
              },
            ],
            "margin": [
              0,
              4,
              0,
              4,
            ],
          },
          {
            "columns": [
              {
                "bold": true,
                "fontSize": 10,
                "text": "Total Brutto",
              },
              {
                "alignment": "right",
                "bold": true,
                "color": "#0f172a",
                "fontSize": 12,
                "text": "1.190,00 €",
              },
            ],
          },
        ],
        "width": 220,
      },
    ],
    "margin": [
      0,
      0,
      0,
      18,
    ],
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Zahlungsbedingungen",
  },
  {
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Zahlbar innerhalb von 30 Tagen netto.",
  },
  {
    "color": "#475569",
    "fontSize": 9,
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Skonto: 2,00% bei Zahlung innerhalb 14 Tagen",
  },
]
`;

exports[`buildProposalDocDefinition — Skonto conditional block (DEC-120) > Snapshot ohne Skonto deterministisch (V5.5 Baseline) 1`] = `
[
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Empfaenger",
  },
  {
    "margin": [
      0,
      0,
      0,
      18,
    ],
    "stack": [
      {
        "bold": true,
        "color": "#0f172a",
        "text": "—",
      },
    ],
  },
  {
    "canvas": [
      {
        "lineColor": "#120774",
        "lineWidth": 1.5,
        "type": "line",
        "x1": 0,
        "x2": 515,
        "y1": 0,
        "y2": 0,
      },
    ],
  },
  {
    "margin": [
      0,
      8,
      0,
      0,
    ],
    "style": "label",
    "text": "Angebot V1",
  },
  {
    "bold": true,
    "color": "#0f172a",
    "fontSize": 16,
    "margin": [
      0,
      0,
      0,
      16,
    ],
    "text": "Test-Angebot",
  },
  {
    "layout": {},
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "table": {
      "body": [
        [
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Pos",
          },
          {
            "style": "tableHeader",
            "text": "Produkt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Menge",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Einzelpreis",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Rabatt",
          },
          {
            "alignment": "right",
            "style": "tableHeader",
            "text": "Summe",
          },
        ],
        [
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "stack": [
              {
                "style": "tableCellBold",
                "text": "Beratungstag",
              },
              {
                "style": "tableCellMuted",
                "text": "8h Onsite",
              },
            ],
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "1.000,00 €",
          },
          {
            "alignment": "right",
            "style": "tableCell",
            "text": "—",
          },
          {
            "alignment": "right",
            "style": "tableCellBold",
            "text": "1.000,00 €",
          },
        ],
      ],
      "headerRows": 1,
      "widths": [
        "auto",
        "*",
        "auto",
        "auto",
        "auto",
        "auto",
      ],
    },
  },
  {
    "columns": [
      {
        "text": "",
      },
      {
        "stack": [
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Subtotal Netto",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "1.000,00 €",
              },
            ],
          },
          {
            "columns": [
              {
                "bold": false,
                "fontSize": 9,
                "text": "Steuer (19%)",
              },
              {
                "alignment": "right",
                "bold": false,
                "color": "#334155",
                "fontSize": 9,
                "text": "190,00 €",
              },
            ],
          },
          {
            "canvas": [
              {
                "lineColor": "#cbd5e1",
                "lineWidth": 0.5,
                "type": "line",
                "x1": 0,
                "x2": 220,
                "y1": 0,
                "y2": 0,
              },
            ],
            "margin": [
              0,
              4,
              0,
              4,
            ],
          },
          {
            "columns": [
              {
                "bold": true,
                "fontSize": 10,
                "text": "Total Brutto",
              },
              {
                "alignment": "right",
                "bold": true,
                "color": "#0f172a",
                "fontSize": 12,
                "text": "1.190,00 €",
              },
            ],
          },
        ],
        "width": 220,
      },
    ],
    "margin": [
      0,
      0,
      0,
      18,
    ],
  },
  {
    "margin": [
      0,
      0,
      0,
      4,
    ],
    "style": "label",
    "text": "Zahlungsbedingungen",
  },
  {
    "margin": [
      0,
      0,
      0,
      14,
    ],
    "text": "Zahlbar innerhalb von 30 Tagen netto.",
  },
]
`;
